# EmailPractice

./: .env  conf.py  gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 1c6eca69ca76_.py  1d84e15fd21f_.py  3b634512eda7_.py  80513ec45145_.py  bfeaabab694d_.py
src/: db.py  main.py
src/entites/: models.py
src/message/: router.py  schemas.py
src/sqladmin/: config.py
src/users/: router.py  schemas.py
